--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     <title>Advance React</title>
   </head>
   <body>
-    <div id="root"></div>
-    <script>
-      const heading = document.createElement("h1");
-      heading.innerHTML = "Hellow from script tag";
-      const rootElement = document.getElementById("root");
-      rootElement.appendChild(heading);
-    </script>
+    <!-- <div id="root"></div> -->
+    <script
+      crossorigin
+      src="https://unpkg.com/react@18/umd/react.development.js"
+    ></script>
+    <script
+      crossorigin
+      src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
+    ></script>
   </body>
 </html>
