--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Advance React</title>
   </head>
   <body>
-    <!-- <div id="root"></div> -->
+    <div id="root"></div>
     <script
       crossorigin
       src="https://unpkg.com/react@18/umd/react.development.js"
@@ -15,5 +15,11 @@
       crossorigin
       src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
     ></script>
+    <script>
+      const heading = React.createElement("h1", {}, "EHading from React");
+      const root = ReactDOM.createRoot(document.getElementById("root"));
+      root.render(heading);
+      console.log("********root_____", root);
+    </script>
   </body>
 </html>
