Added App.js file adn wrote all react previous code in App.js file and Call its in index.js using script tags scr

--- a/index.html
+++ b/index.html
@@ -15,11 +15,6 @@
       crossorigin
       src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
     ></script>
-    <script>
-      const heading = React.createElement("h1", {}, "EHading from React");
-      const root = ReactDOM.createRoot(document.getElementById("root"));
-      root.render(heading);
-      console.log("********root_____", root);
-    </script>
+    <script src="./App.js"></script>
   </body>
 </html>
