--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
       src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
     ></script>
     <script src="./App.js"></script>
+    <script src="./ComplexReactElement.js"></script>
   </body>
 </html>
